# atomic

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
atomic_red_team/: cli.py  client.py  constants.py  pattern_matching.py  types.py
atomic_red_team/cli/: __init__.py  helpers.py
tests/client/: test_client.py
